--- a/styles/main.css
+++ b/styles/main.css
@@ -14,27 +14,45 @@ body{
     flex-direction: column;
 }
 .header{
+    display: flex;
+    flex-direction: column;
     height: 80px;
     background-color: #FFC4E1;
-    color: #ca5997;
-    padding: 1rem;
+    color: #ca5997;   
+    box-shadow: 0px 5px 8px #525252; 
+    z-index: 11;
 }
+.header-title{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    text-align: center;
+    margin: 0.5rem 0rem;
+}
+
+.header-stats{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+}
+
 .game-board{
-    margin: 0.5rem auto;
+    margin: 0rem auto;
     padding: 1rem;
-    background-color: rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 0px 0px 10px 10px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr ;
+    grid-template-columns: repeat(4, 1fr);    
 }
 .card{
     background-color: #FFC4E1;
     border: 2px solid #582f46;
-    border-radius: 20px;
-    margin: 0.5rem;
-    box-shadow: 5px 5px 5px #525252;
-    width: 100px;
-    height: 100px;
+    border-radius: 5px;
+    margin: 0.4rem;
+    box-shadow: 5px 5px 8px #525252;
+    width: 80px;
+    height: 80px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -42,36 +60,97 @@ body{
     cursor: pointer;
     transition: 0.2s ease-out;
 }
-
 .card img{
     width: auto;
-    height: 100px;
+    height: 80px;
 }
+
+@media (min-width: 800px) {
+    .game-board{
+        grid-template-columns: repeat(5, 1fr);
+    }
+    .card{
+        margin: 0.8rem;
+        width: 120px;
+        height: 120px;
+    }
+    .card img{
+        height: 120px;
+    }
+    .header-title{
+        font-size: 28px;
+        margin: 0rem;
+    }
+    .header-stats{
+        font-size: 22px;        
+    }
+}
+
+
 .flip-out {     
     transform: scaleX(0);
     transition: 0.2s ease-out;
 }
 
-
 .protectFromClicks{
     position:fixed;
-    top: 15vh;
+    top: 80px;
     left: 0px;
     width: 100vw;
     height: 100vw;
+    min-height: 512px;
     z-index: 10;
-    opacity: 0;
-    background-color: aquamarine;
+    opacity: 0.2;
+    background-color: red;
     cursor:default;
+    transition: 0.4 ease-out;
 }
 
-.header{
+/*to show this, set left to 0px*/
+.modal{
+    position:fixed;
+    top: 90px ;
+    left: 0px;
+    opacity: 1;
+    width: 100vw;
+    height: 160px;    
+    z-index: 12;    
+    background-color: rgba(0, 0, 0, 0.4);    
+    cursor:default;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: 0.4s ease-out;
+}
+.show{
+    left: 0px;
+    opacity: 1;
+    transition: 0.4s ease-out;
+}
+.hide{
+    left: -100vw;
+    opacity: 0;
+    transition: 0.4s ease-out;
+}
+.modal-paragraph, .modal-title, .modal-btn{
+    color: white;    
+    margin: 0.5rem;
+    font-size: 22px;
 }
 
-.header-stats{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+.modal-btn{
+    padding: 0.4rem 1rem;
+    border-radius: 5px;
+    border: 0;
+    box-shadow: 5px 5px 18px #ddd;
+    font-size: 20px;
+    background-color: #FF87CA;
+    cursor: pointer;
+    transition: 0.2s ease-out;
+}
+.modal-btn:hover{
+    transform: scale(1.2) rotate(4deg);
+    
+    transition: 0.2s ease-out;
 }
