--- a/styles/main.css
+++ b/styles/main.css
@@ -46,8 +46,8 @@ body{
     grid-template-columns: repeat(4, 1fr);    
 }
 .card{
-    background-color: #FFC4E1;
-    border: 2px solid #582f46;
+    background-color: #582f46;
+    border: 2px solid  #ca5997;
     border-radius: 5px;
     margin: 0.4rem;
     box-shadow: 5px 5px 8px #525252;
@@ -59,6 +59,10 @@ body{
     align-items: center;
     cursor: pointer;
     transition: 0.2s ease-out;
+}
+.card:hover {
+    /*border: solid #582f46 4px;*/
+    box-shadow: 10px 10px 12px #525252;
 }
 .card img{
     width: auto;
