--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
 }
 body{    
     font-family: sans-serif;
-    background-color: #EED7CE;
+    background-color: #FFD07F;
 }
 .app{
     height: 100%;
@@ -17,16 +17,16 @@ body{
     display: flex;
     flex-direction: column;
     height: 80px;
-    background-color: #FFC4E1;
-    color: #ca5997;   
+    background-color: #FDA65D;
+    color: #E26A2C;   
     box-shadow: 0px 5px 8px #525252; 
     z-index: 11;
 }
 .header-title{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
-    text-align: center;
-    margin: 0.5rem 0rem;
+    text-align: left;
+    margin: 0.5rem 2.5rem;
 }
 
 .header-stats{
@@ -42,12 +42,13 @@ body{
     padding: 1rem;
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 0px 0px 10px 10px;
+    border: #E26A2C solid 1px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);    
 }
 .card{
     background-color: #582f46;
-    border: 2px solid  #ca5997;
+    border: 2px solid  #E26A2C;
     border-radius: 5px;
     margin: 0.4rem;
     box-shadow: 5px 5px 8px #525252;
@@ -86,7 +87,7 @@ body{
     }
     .header-title{
         font-size: 28px;
-        margin: 0rem;
+        margin: 0rem 2.5rem;
     }
     .header-stats{
         font-size: 22px;        
@@ -133,20 +134,22 @@ body{
     right: 10vw;
     z-index: 13;
     opacity: 1;
-    padding: 0.3rem 0.8rem;
+    padding: 0.1rem 0.4rem;
     border-radius: 5px;
     border: 0;
-    box-shadow: 5px 5px 18px rgb(48, 48, 48);
-    font-size: 16px;
-    background-color: #FF87CA;
-    color: honeydew;
+    box-shadow: 2px 2px 15px rgb(48, 48, 48);
+    font-size: 12px;
+    background-color: #EED7CE;
+    color: #E26A2C;
+    border: 2px solid  #E26A2C;
     cursor: pointer;
-    transition: 0.2s ease-out;
+    transition: 0.4s ease-out;
 }
 .btn-restart-hide{
     opacity: 0;
+    transition: 0.4s ease-out;
 }
-.btn-restar:hover{
+.btn-restart:hover{
     transform: scale(1.2) rotate(4deg);    
     transition: 0.2s ease-out;
 }
@@ -180,8 +183,9 @@ body{
 }
 .modal-paragraph, .modal-title, .modal-btn{
     color: white;    
-    margin: 0.5rem;
-    font-size: 22px;
+    margin: .5rem ;
+    padding: 0 1.8rem;
+    font-size: 18px;
 }
 
 .modal-btn{
